k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: k3s-dns
  labels:
    name: k3s-dns
