k8s/pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: cowfortune
spec:
  containers:
  - name: funbox
    image: wernight/funbox
    command: ["/bin/sh"]
    args: ["-c", "while true; do fortune | cowsay; sleep 15;done"]
